# vulkanite

./: README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
generator/: Cargo.toml
generator/src/: generator.rs  main.rs  structs.rs  xml.rs
generator/src/generator/: advanced_commands.rs  dispatcher.rs  enums.rs  extensions.rs  features.rs  handles.rs  raw_commands.rs  structs.rs
vulkanite/: Cargo.toml
vulkanite/src/: lib.rs  loaded.rs  window.rs
vulkanite/src/vk/: custom.rs  dispatcher.rs  enums.rs  extensions.rs  formats.rs  structs.rs
vulkanite/src/vk/raw/: commands.rs  handles.rs
vulkanite/src/vk/raw/handles/: macros.rs
vulkanite/src/vk/rs/: commands.rs
