[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkanite = { path = "../vulkanite/", features = [
    "loaded", 
    "smallvec",
    "version_1_3",
    "raw-window-handle",
    "ext_swapchain",
    "ext_debug_utils"] }
smallvec = "1.13"
raw-window-handle = "0.6"
winit = "0.30"
anyhow = "1.0"
